--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "5.22.0",
     "dotenv": "^17.2.4",
     "graphql": "^16.12.0",
+    "ioredis": "^5.9.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -47,6 +48,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^22.10.7",
+    "@types/ioredis": "^5.0.0",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
