--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^17.2.4",
     "graphql": "^16.12.0",
     "ioredis": "^5.9.3",
+    "k6": "^0.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -46,9 +47,10 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^22.10.7",
     "@types/ioredis": "^5.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/k6": "^1.6.0",
+    "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
